# clr-boot-manager

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  HACKING  Makefile.am  README.md  clr-boot-manager.zsh  configure.ac  continous.sh  meson.build  meson_options.txt  sgcheck.suppressions  test-init.sh  update_format.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
compat/: README.md  gummiboot_updaters.sh
data/: clr-boot-manager-booted.service  clr-boot-manager-booted.service.in  clr-boot-manager-mount-boot.service.in  meson.build
data/completions/bash/: clr-boot-manager  clr-boot-manager.in  meson.build
data/completions/zsh/: _clr-boot-manager  _clr-boot-manager.in  meson.build
docker/: Dockerfile  dockerrun.sh
m4/: ax_valgrind_check.m4
man/: clr-boot-manager.1  clr-boot-manager.1.in  meson.build
scripts/: continuous.sh  mkrelease.sh  run-test-suite.sh  travis_test.sh
src/: array.c  array.h  bootloader.h  bootman.c  bootman.h  cli.c  cli.h  files.c  files.h  hashmap.c  hashmap.h  main.c  meson.build  util.c  util.h
src/bootloaders/: bootloader.h  extlinux.c  goofiboot.c  grub2.c  gummiboot.c  mbr.c  mbr.h  shim-systemd.c  syslinux-common.c  syslinux-common.h  syslinux.c  systemd-boot.c  systemd-class.c  systemd-class.h
src/bootman/: bootman.c  bootman.h  bootman_private.h  files.c  files.h  kernel.c  sysconfig.c  timeout.c  update.c  util.h
src/cli/: cli.c  cli.h  main.c
src/cli/ops/: kernels.c  kernels.h  mount.c  mount.h  report_booted.c  report_booted.h  timeout.c  timeout.h  update.c  update.h
src/efi/: cbm_efi.c  cbm_efi.h  efisupport.c  efisupport.h
src/lib/: blkid_stub.c  blkid_stub.h  bootvar.c  bootvar.h  cmdline.c  cmdline.h  files.c  files.h  log.c  log.h  os-release.c  os-release.h  probe.c  probe.h  system_stub.c  system_stub.h  template.c  template.h  util.c  util.h  writer.c  writer.h
src/nica/: array.h  files.c  files.h  hashmap.h  inifile.h  util.c  util.h
src/ops/: report_booted.c  report_booted.h  timeout.c  timeout.h  update.c  update.h
tests/: blkid-harness.h  check-array.c  check-cmdline.c  check-core.c  check-files.c  check-grub2.c  check-hashmap.c  check-inifile.c  check-legacy.c  check-list.c  check-os-release.c  check-probe.c  check-select-bootloader.c  check-syslinux.c  check-template.c  check-uefi.c  check-updates.c  harness.c  harness.h  meson.build  system-harness.h
tests/data/: blobfile  clear.os-release  gptmbr.bin.v2  hashfile  match1  nomatch1  nomatch2  solus.os-release
tests/data/cmdline/: mangledmess  oneline
tests/data/cmdline_delete_all/etc/kernel/cmdline-removal.d/: comments.conf
tests/data/cmdline_delete_all/usr/share/kernel/cmdline.d/: full.conf
tests/data/cmdline_delete_middle/etc/kernel/cmdline-removal.d/: mangledmess.conf
tests/data/cmdline_delete_middle/usr/share/kernel/cmdline.d/: full.conf
tests/data/cmdline_vendor_merged/etc/kernel/: cmdline
tests/data/cmdline_vendor_merged/etc/kernel/cmdline.d/: 10_local_first.conf  30_local_third.conf  40_masked.conf
tests/data/cmdline_vendor_merged/usr/share/kernel/cmdline.d/: 30_third.conf  40_masked.conf
tests/data/cmdline_vendor_only/usr/share/kernel/cmdline.d/: 10_first.conf  20_second.conf
tests/data/etc/kernel/: cmdline
tests/data/etc/kernel/cmdline.d/: 10_first.conf  20_second.conf  30_third.conf
tests/stub/: bootvar.c
